--- a/Vjezba 10/index.html
+++ b/Vjezba 10/index.html
@@ -29,7 +29,6 @@
 	<video width="400" controls>
         <source src="kornati.mp4" type="video/mp4">
     </video> 
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=66UdXjFtf7g">
-    </iframe>
+    <iframe width="420" height="345" src="https://www.youtube.com/embed/66UdXjFtf7g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>>
 </body>
 </html>
